fix fullscreen alignment

--- a/WebApp/static/css/full_map.css
+++ b/WebApp/static/css/full_map.css
@@ -12,12 +12,17 @@
 }
 
 .sidenav a {
-    /*padding: 0px 8px 8px 32px;*/
+    padding: 0px 23px 8px 18px;
     text-decoration: none;
     /*font-size: 25px;*/
     color: #818181;
     display: block;
     transition: 0.3s;
+}
+
+.close-panel{
+    padding-right: 25px;
+    font-size: 25px;
 }
 
 .sidenav .basemap_img {
